--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-    <img id="bg-circle" src="assets/bg-circle.png">
+    <img id="bg-circle" src="/assets/bg-circle.png">
     <div id="overlay"><span id="menu-circle"></span><a id="home" class="mobile-link" href="">Home</a><a
             class="mobile-link" href="">Downloads</a><a class="mobile-link" href="">Install</a></div>
 
@@ -62,7 +62,7 @@
             <h2 id="subTitle">Plus its open source!</h2>
             <a id="get-started" href="install.html">Get Started</a>
         </div>
-        <div class="col"><img id="phone" src="https://github.com/maxwellfortney/BlueBubblesTest/blob/master/assets/phone.png?raw=true"></div>
+        <div class="col"><img id="phone" src="/assets/phone.png"></div>
     </div>
     <div id="footer">
         <div class="social-media"><a href="maxwelltest.xyz"><img id="github" src="/assets/github-logo.png"></a></div>
