--- a/downloads.html
+++ b/downloads.html
@@ -3,8 +3,8 @@
 <head>
     <!-- CSS Links -->
     <link rel="stylesheet" type="text/css" href="/css/base.css">
-    <link rel="stylesheet" href="/css/install.css">
-    <link rel="stylesheet" href="/css/hamburgers.css">
+    <link rel="stylesheet" type="text/css" href="/css/downloads.css">
+    <link rel="stylesheet" type="text/css" href="/css/hamburgers.css">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,8 +53,8 @@
         </nav>
         <nav>
             <a href="/index.html" class="rightnav">Home</a>
-            <a href="/downloads.html" class="rightnav">Downloads</a>
-            <a href="#" class="rightnav">Install</a>
+            <a href="#" class="rightnav">Downloads</a>
+            <a href="/install.html" class="rightnav">Install</a>
             <div onclick="addIsActive()" id="hamburger" class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
