--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <!-- CSS Links -->
+    <link rel="stylesheet" type="text/css" href="/css/base.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/hamburgers.css">
 
@@ -51,8 +52,8 @@
         </nav>
         <nav>
             <a href="#" class="rightnav">Home</a>
-            <a href="#" class="rightnav">Downloads</a>
-            <a href="#" class="rightnav">Install</a>
+            <a href="downloads.html" class="rightnav">Downloads</a>
+            <a href="install.html" class="rightnav">Install</a>
             <div onclick="addIsActive()" id="hamburger" class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
