Fixed mobile links

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 <body>
     <img id="bg-circle" src="/assets/bg-circle.png">
-    <div id="overlay"><span id="menu-circle"></span><a id="home" class="mobile-link" href="">Home</a><a
-            class="mobile-link" href="">Downloads</a><a class="mobile-link" href="">Install</a></div>
+    <div id="overlay"><span id="menu-circle"></span><a id="home" class="mobile-link" href="/index.html">Home</a><a
+            class="mobile-link" href="/downloads.html">Downloads</a><a class="mobile-link" href="/install.html">Install</a></div>
 
     <header id="navbar">
         <nav class="leftnav">
