Changed github link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <img id="bg-circle" src="/assets/bg-circle.png">
-    <div id="overlay"><span id="menu-circle"></span><a id="home" class="mobile-link" href="/index.html">Home</a><a
+    <div id="overlay"><span id="menu-circle"></span><a id="home" class="mobile-link is-open" href="/index.html">Home</a><a
             class="mobile-link" href="/downloads.html">Downloads</a><a class="mobile-link" href="/install.html">Install</a></div>
 
     <header id="navbar">
@@ -51,7 +51,7 @@
             <a id="logo" href="#">BlueBubbles</a>
         </nav>
         <nav>
-            <a href="#" class="rightnav">Home</a>
+            <a href="#" class="rightnav is-open">Home</a>
             <a href="downloads.html" class="rightnav">Downloads</a>
             <a href="install.html" class="rightnav">Install</a>
             <div onclick="addIsActive()" id="hamburger" class="hamburger hamburger--collapse" type="button">
@@ -70,7 +70,7 @@
         <div class="col"><img id="phone" src="/assets/phone.png"></div>
     </div>
     <div id="footer">
-        <div class="social-media"><a href="maxwelltest.xyz"><img id="github" src="/assets/github-logo.png"></a></div>
+        <div class="social-media"><a href="https://www.github.com"><img id="github" src="/assets/github-logo.png"></a></div>
         <div><p id="copyright">&copy; 2020 BlueBubbles</p></div>
     </div>
 </body>
