--- a/install.html
+++ b/install.html
@@ -54,7 +54,7 @@
         <nav>
             <a href="/index.html" class="rightnav">Home</a>
             <a href="/downloads.html" class="rightnav">Downloads</a>
-            <a href="#" class="rightnav">Install</a>
+            <a href="#" class="rightnav is-open">Install</a>
             <div onclick="addIsActive()" id="hamburger" class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -67,7 +67,7 @@
         </div>
     </div>
     <div id="footer">
-        <div class="social-media"><a href="maxwelltest.xyz"><img id="github" src="/assets/github-logo.png"></a></div>
+        <div class="social-media"><a href="https://www.github.com"><img id="github" src="/assets/github-logo.png"></a></div>
         <div>
             <p id="copyright">&copy; 2020 BlueBubbles</p>
         </div>
