--- a/downloads.html
+++ b/downloads.html
@@ -53,7 +53,7 @@
         </nav>
         <nav>
             <a href="/index.html" class="rightnav">Home</a>
-            <a href="#" class="rightnav">Downloads</a>
+            <a href="#" class="rightnav is-open">Downloads</a>
             <a href="/install.html" class="rightnav">Install</a>
             <div onclick="addIsActive()" id="hamburger" class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
@@ -67,7 +67,7 @@
         </div>
     </div>
     <div id="footer">
-        <div class="social-media"><a href="maxwelltest.xyz"><img id="github" src="/assets/github-logo.png"></a></div>
+        <div class="social-media"><a href="https://www.github.com"><img id="github" src="/assets/github-logo.png"></a></div>
         <div>
             <p id="copyright">&copy; 2020 BlueBubbles</p>
         </div>
