--- a/downloads.html
+++ b/downloads.html
@@ -69,7 +69,7 @@
     <div id="footer">
         <div class="social-media"><a href="https://www.github.com"><img id="github" src="/assets/github-logo.png"></a></div>
         <div>
-            <p id="copyright">&copy; 2020 BlueBubbles</p>
+            <p id="copyright">BlueBubbles</p>
         </div>
     </div>
 </body>
