--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div id="footer">
         <div class="social-media"><a href="https://www.github.com"><img id="github" src="/assets/github-logo.png"></a></div>
-        <div><p id="copyright">&copy; 2020 BlueBubbles</p></div>
+        <div><p id="copyright">BlueBubbles</p></div>
     </div>
 </body>
 
