--- a/downloads/index.html
+++ b/downloads/index.html
@@ -56,10 +56,10 @@
     <div id="bg-circle"></div>
     <div id="overlay">
       <span id="menu-circle"></span>
-      <a id="home" class="mobile-link" href="/">Home</a>
-      <a class="mobile-link is-open" href="/downloads">Downloads</a>
-      <a class="mobile-link" href="/install">Install</a>
-      <a class="mobile-link" href="/faq">FAQ</a>
+      <a id="home" class="mobile-link" href="/index.html">Home</a>
+      <a class="mobile-link is-open" href="/downloads/index.html">Downloads</a>
+      <a class="mobile-link" href="/install/index.html">Install</a>
+      <a class="mobile-link" href="/faq/index.html">FAQ</a>
     </div>
 
     <header class="navbar">
