--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div id="bg-circle"></div>
     <div id="overlay">
       <span id="menu-circle"></span>
-      <a id="home" class="mobile-link is-open" href="/">Home</a>
-      <a class="mobile-link" href="/downloads">Downloads</a>
-      <a class="mobile-link" href="/install">Install</a>
-      <a class="mobile-link" href="/faq">FAQ</a>
+      <a id="home" class="mobile-link is-open" href="/index.html">Home</a>
+      <a class="mobile-link" href="/downloads/index.html">Downloads</a>
+      <a class="mobile-link" href="/install/index.html">Install</a>
+      <a class="mobile-link" href="/faq/index.html">FAQ</a>
     </div>
 
     <header class="navbar">
@@ -69,10 +69,10 @@
         <a id="logo" alt="BlueBubbles Logo" href="/">BlueBubbles</a>
       </nav>
       <nav class="rightnav">
-        <a href="/" class="is-open">Home</a>
-        <a href="/downloads">Downloads</a>
-        <a href="/install">Install</a>
-        <a href="/faq">FAQ</a>
+        <a href="/index.html" class="is-open">Home</a>
+        <a href="/downloads/index.html">Downloads</a>
+        <a href="/install/index.html">Install</a>
+        <a href="/faq/index.html">FAQ</a>
         <div onclick="addIsActive()" id="hamburger" class="hamburger hamburger--collapse" type="button">
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
